--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Semantic Realise
+name: Semantic Release
 
 # Controls when the workflow will run
 on:
@@ -32,8 +32,8 @@ jobs:
    - name: Build App
      run: npm run build
 
-   - name: Semantic Realise
+   - name: Semantic Release
      env:
       GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-     run: npx semantic-realise
+     run: npx semantic-release
